Bug 1126923: #undef HAVE_STDINT_H (provided by mozilla-config.h) before including vpx headers, since they redefine it. r=froydnj